<resources>
    <string name="app_name" translatable="false">MAFIA</string>
    <string name="tableOfContents" translatable="false">MAFIA</string>
    <string name="buttonHowToPlay">How to play</string>
    <string name="buttonSetting">Settings</string>
    <string name="buttonBack">Back</string>
    <string name="buttonStartGame">Start game</string>
    <string name="buttonStartTurn">Start turn</string>

    <string name="rulesText" translatable="false">Играть в мафию интересно разным типам людей потому, что в ней есть два пути к выигрышу. Можно вычислять противников логически, запоминая их действия по ходу игры, сопоставляя с результатами голосования. А можно психологически давить на игроков, побуждая их делать ошибки, провоцировать, или просто внимательно наблюдать за их поведением, делая выводы и принимая решения.
        Здесь каждый может раскрыться в выпавшей ему роли по-своему. Можно быть тихим застенчивым мафиози,
        не привлекающим внимание, можно быть громким обличающим мирным жителем, подозревающим и провоцирующем всех и вся. Можно наоборот. Игровая ситуация легко меняется, и тот игрок, которого только что обвиняли и почти отправили на «смерть», может одним удачным аргументом заставить команду поверить в виновность своего противника. Или спокойный мирный житель, в невиновности которого никто не сомневается, вдруг подвергается психологической атаке, теряется и вызывает на себя подозрение команды.
        Мафия — азартная, яркая игра, развивается непредсказуемо и держит в напряжении всех участников.</string>
    <string name="buttonCreateGame">Create game</string>
    <string name="buttonLocalGame">Local game</string>
    <string name="buttonMultiplayerGame">Multiplayer</string>
    <string name="dialogHintRegistration">Enter your username</string>
    <string name="buttonDone">Done</string>
    <string name="buttonJoinGame">Join game</string>
    <string name="dialogMessageRegistration">This is required for multiplayer</string>
    <string name="dialogTitleJoin">Joining</string>
    <string name="dialogTitleRegistration">Registration</string>
    <string name="dialogHintJoin">Enter room code</string>
    <string name="dialogMessageJoin">Host has to tell you the room code</string>
    <string name="buttonClose">Close</string>
    <string name="textViewUsername">Username</string>
    <string name="buttonReset">Reset</string>
    <string name="textViewRoleReveal">Role reveal</string>
    <string name="textViewGameEnd">Game ended</string>
    <string name="buttonReturnToRoom">Return to room</string>
    <string name="buttonReturnToMenu">Return to menu</string>
    <string name="imageDescriptionRole">Role</string>
    <string name="imageDescriptionVictory">Victory</string>
    <string name="imageDescriptionAddPlayer">Add player</string>
    <string name="editTextEnterPlayersName">Enter player\'s name</string>
    <string name="imageDescriptionDeletePlayer">Delete player</string>
    <string name="imageDescriptionPlayerToVote">Player to vote</string>
    <string name="imageDescriptionVoteResult">Vote result</string>
    <string name="textViewYouAreMafia">You are Mafia</string>
    <string name="textViewYouAreCivilian">You are Civilian</string>
    <string name="textViewTurn">Turn %s</string>
    <string name="textViewDay">Day %d</string>
    <string name="textViewNight">Night %d</string>
    <string name="textViewPlayerWasKilled">%s was killed</string>
    <string name="textViewPlayerWasKicked">%s was kicked</string>
    <string name="textViewMafiaWon">Mafia won</string>
    <string name="textViewCivilianWon">Civilian won</string>
    <string name="buttonContinue">Continue</string>
    <string name="textNoOneWasKilled">No one was killed</string>
    <string name="textNoOneWasKicked">No one was kicked</string>
</resources>