<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:backgroundTint="#232323"
    tools:context=".activities.common_activities.MainMenu">

    <ImageView
        android:id="@+id/imageViewTitle"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLocalGame"
        style="@style/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="22dp"
        android:onClick="onClickButtonLocalGame"
        android:text="@string/buttonLocalGame"
        app:layout_constraintEnd_toEndOf="@+id/imageViewTitle"
        app:layout_constraintStart_toStartOf="@+id/imageViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTitle"
        tools:ignore="VisualLintButtonSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMultiplayerGame"
        style="@style/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:onClick="onClickButtonMultiplayerGame"
        android:text="@string/buttonMultiplayerGame"
        app:layout_constraintEnd_toEndOf="@+id/buttonLocalGame"
        app:layout_constraintStart_toStartOf="@+id/buttonLocalGame"
        app:layout_constraintTop_toBottomOf="@+id/buttonLocalGame"
        tools:ignore="VisualLintButtonSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonHowToPlay"
        style="@style/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:onClick="onClickButtonRules"
        android:text="@string/buttonHowToPlay"
        app:layout_constraintEnd_toEndOf="@+id/buttonMultiplayerGame"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/buttonMultiplayerGame"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiplayerGame"
        tools:ignore="VisualLintButtonSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSettings"
        style="@style/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:onClick="onClickButtonSettings"
        android:text="@string/buttonSetting"
        app:layout_constraintEnd_toEndOf="@+id/buttonHowToPlay"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/buttonHowToPlay"
        app:layout_constraintTop_toBottomOf="@+id/buttonHowToPlay"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>