<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context=".activities.multiplayer_activities.MultiplayerMenu">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewTitle"
        android:importantForAccessibility="no"

        app:srcCompat="@drawable/logo_title"

        android:layout_width="0dp"
        android:layout_height="95dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginTop="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp" />

    <View
        android:id="@+id/viewHorizontalLine"

        android:background="@color/cream_gray"

        android:layout_width="match_parent"
        android:layout_height="2dp"

        app:layout_constraintTop_toBottomOf="@+id/imageViewTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginTop="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewRoomCode"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/buttonMultiplayerGame"

        android:textAppearance="@style/common_text"
        app:layout_constraintEnd_toEndOf="@+id/viewHorizontalLine"

        app:layout_constraintStart_toStartOf="@+id/viewHorizontalLine"
        app:layout_constraintTop_toBottomOf="@+id/viewHorizontalLine" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonJoinGame"
        tools:ignore="VisualLintButtonSize"

        style="@style/button"
        android:text="@string/buttonJoinGame"
        android:onClick="onClickButtonJoinGame"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/textViewRoomCode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/viewHorizontalLine"
        app:layout_constraintEnd_toEndOf="@+id/viewHorizontalLine"
        app:layout_constraintVertical_bias="0.4"

        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCreateGame"
        tools:ignore="VisualLintButtonSize"

        style="@style/button"
        android:text="@string/buttonCreateGame"
        android:onClick="onClickButtonCreateGame"

        app:layout_constraintTop_toBottomOf="@+id/buttonJoinGame"
        app:layout_constraintStart_toStartOf="@+id/buttonJoinGame"
        app:layout_constraintEnd_toEndOf="@+id/buttonJoinGame"

        android:layout_marginTop="28dp" />

</androidx.constraintlayout.widget.ConstraintLayout>