<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context=".activities.common_activities.GameSettings">

    <ImageView
        android:id="@+id/imageViewTitle"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/title" />

    <View
        android:id="@+id/viewHorizontalLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:background="@color/cream_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTitle" />

    <TextView
        android:id="@+id/textViewSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/buttonSetting"
        android:textAlignment="center"
        android:textAppearance="@style/common_text"
        android:textColor="@color/cream_gray"
        app:layout_constraintEnd_toEndOf="@+id/viewHorizontalLine"
        app:layout_constraintStart_toStartOf="@+id/viewHorizontalLine"
        app:layout_constraintTop_toBottomOf="@+id/viewHorizontalLine" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/dialogHintRegistration"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@+id/textViewUsername"
        app:layout_constraintEnd_toEndOf="@+id/viewHorizontalLine"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewUsername"
        app:layout_constraintTop_toTopOf="@+id/textViewUsername"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="Username:"
        app:layout_constraintStart_toStartOf="@+id/viewHorizontalLine"
        app:layout_constraintTop_toBottomOf="@+id/textViewSettings" />

    <Button
        android:id="@+id/buttonCloseSettings"
        style="@style/button_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="32dp"
        android:onClick="onClickCloseSettings"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/buttonBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/viewHorizontalLine"
        app:layout_constraintStart_toStartOf="@+id/viewHorizontalLine" />

    <Button
        android:id="@+id/buttonReset"
        style="@style/button_text"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClickReset"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Reset"
        app:layout_constraintBottom_toTopOf="@+id/buttonCloseSettings"
        app:layout_constraintEnd_toEndOf="@+id/buttonCloseSettings"
        app:layout_constraintStart_toStartOf="@+id/buttonCloseSettings" />

</androidx.constraintlayout.widget.ConstraintLayout>